--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cayhualla.practicacalificado_6.MainActivity">
+    tools:context="com.cayhualla.practicacalificado_6.Activities.MainActivity">
 
     <TextView
         android:id="@+id/welcome_text"
@@ -24,5 +24,14 @@
         android:textAlignment="center"
         android:textSize="24sp"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:text="Logout"
+        android:onClick="callLogout"/>
 
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
