--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cardview_light_background"
+    android:fitsSystemWindows="true"
     tools:context="com.cayhualla.practicacalificado_6.Activities.MainActivity">
+
+
+
+
 
     <TextView
         android:id="@+id/welcome_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="16dp"
-        android:text="Welcome"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Bienvenido"
         android:textAlignment="center"
-        android:textSize="32sp"/>
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/fullname_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/welcome_text"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_toEndOf="@+id/welcome_text"
         android:textAlignment="center"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        tools:text="Nombre completo" />
 
-    <Button
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:text="Logout"
-        android:onClick="callLogout"/>
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@android:color/white"
+        app:menu="@menu/botton" />
 
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
