--- a/app/src/main/res/layout/activity_producto_register.xml
+++ b/app/src/main/res/layout/activity_producto_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="16dp"
-    tools:context="com.cayhualla.practicacalificado_6.ProductoRegister">
+    tools:context="com.cayhualla.practicacalificado_6.Activities.ProductoRegister">
 
     <TextView
         android:layout_width="match_parent"
