--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,85 +2,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
     android:fitsSystemWindows="true"
     tools:context="com.cayhualla.practicacalificado_6.Activities.MainActivity">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
-        <TextView
-            android:id="@+id/welcome_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Bienvenido"
-            android:textAlignment="center"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/fullname_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@+id/welcome_text"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            tools:text="Nombre completo" />
-
-
-    </LinearLayout>
-
-
     <RelativeLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+
+        android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigation"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentStart="true">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="32dp"
-            android:layout_marginEnd="32dp"
-            android:clickable="true"
-            android:onClick="callRegisterForm"
-            app:fabSize="normal"
-            app:srcCompat="@android:drawable/ic_menu_add" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/user_list"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/floatingActionButton"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="21dp" />
-
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
-
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        app:itemBackground="@color/colorPrimary"
+        app:itemBackground="@android:color/holo_red_light"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
         app:menu="@menu/botton" />
-
-
-
 </RelativeLayout>
