--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -1,52 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="20dp"
+    android:background="@android:color/background_light"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="160dp"
+
+        android:background="@color/cardview_light_background"
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/nombre"
+            android:id="@+id/tx_nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:text="Fullname"
+            android:textColor="@android:color/black"
+
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/precio"
+            android:id="@+id/tx_precio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/nombre"
+            android:layout_below="@+id/tx_nombre"
             android:text="Fullname"
             android:textSize="15sp"
+            android:textColor="@android:color/black"
+
             android:textStyle="bold" />
 
 
         <TextView
-            android:id="@+id/descripcion"
+            android:id="@+id/tx_descripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/precio"
+            android:layout_below="@+id/tx_precio"
+            android:textColor="@android:color/black"
+
             android:text="Email"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
         <View
+            android:id="@+id/view"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/descripcion"
+            android:layout_below="@+id/tx_descripcion"
             android:layout_marginTop="10dp"
             android:background="@drawable/separador" />
 
@@ -54,20 +69,27 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_alignTop="@+id/view"
+            android:layout_marginEnd="17dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/black"
+
+            android:layout_toStartOf="@+id/button2"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/arcvhivar"
+            android:drawableLeft="@drawable/archive"
             android:text="  Archivar" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:textColor="@android:color/black"
+
             android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/view"
+            android:layout_marginTop="10dp"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/start"
+            android:drawableLeft="@drawable/favorite"
             android:text="  Favoritos" />
 
 
