--- a/app/src/main/res/menu/botton.xml
+++ b/app/src/main/res/menu/botton.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_home"
         android:title="Home"
-        android:icon="@android:drawable/ic_menu_gallery" />
+        android:icon="@drawable/home"
+        android:fillColor="#FFFF"/>
+
 
     <item
-        android:id="@+id/menu_camera"
+        android:id="@+id/menu_favorite"
         android:title="Favorite"
-        android:icon="@android:drawable/ic_menu_set_as" />
+        android:icon="@drawable/star"
+        android:fillColor="#FFFF"/>
 
     <item
-        android:id="@+id/menu_search"
+        android:id="@+id/menu_delete"
         android:title="Delete"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:fillColor="#FFFF"
+        android:icon="@drawable/delete"
+
         />
 
 
