--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -9,7 +10,7 @@
         android:id="@+id/action_takepicture"
         android:orderInCategory="101"
         android:title="Tomar Foto"
-        android:icon="@android:drawable/ic_menu_rotate"
+        android:icon="@drawable/refresh"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_logout"
