--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
+                    android:textColor="@android:color/black"
                     android:hint="Username"
                     android:inputType="text"
                     android:maxLines="1" />
@@ -60,6 +61,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:hint="Password"
+                    android:textColor="@android:color/black"
+
                     android:inputType="textPassword"
                     android:maxLines="1" />
 
@@ -79,8 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_green_light"
-                android:onClick="callRegisterForm"
                 android:text="Registrarse"
+                android:onClick="callRegisterFormUsuario"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
