--- a/app/src/main/res/layout/activity_producto_register.xml
+++ b/app/src/main/res/layout/activity_producto_register.xml
@@ -25,18 +25,18 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="40dp"
             android:text="Registrar un Producto"
             android:ems="12"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="24sp" />
-
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayout"
+            android:id="@+id/textInputLayout5"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
 
             android:padding="5dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3">
@@ -47,29 +47,31 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/imageView5"
                     android:layout_width="63dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/home" />
+
+                    app:srcCompat="@drawable/account_box" />
 
                 <EditText
                     android:id="@+id/nombre_input"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_toStartOf="@+id/button2"
                     android:ems="12"
                     android:hint="Nombre"
                     android:inputType="textPersonName"
-                    android:textColor="@android:color/holo_red_light"
+                    android:textColor="@android:color/black"
                     android:textColorHint="@color/colorAccent"
                     app:layout_constraintEnd_toStartOf="@+id/button2"
                     app:layout_constraintStart_toStartOf="parent" />
-
             </LinearLayout>
 
 
         </android.support.design.widget.TextInputLayout>
+
 
 
         <android.support.design.widget.TextInputLayout
@@ -89,11 +91,11 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="63dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/a"
-                    />
+
+                    app:srcCompat="@drawable/shape" />
 
                 <EditText
                     android:id="@+id/categoria_input"
@@ -102,9 +104,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_toStartOf="@+id/button2"
                     android:ems="12"
-                    android:hint="Nombre"
+                    android:hint="Categoria"
                     android:inputType="textPersonName"
-                    android:textColor="@android:color/holo_red_light"
+                    android:textColor="@android:color/black"
                     android:textColorHint="@color/colorAccent"
                     app:layout_constraintEnd_toStartOf="@+id/button2"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -120,8 +122,7 @@
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:alpha="0.1"
-            android:background="@android:color/holo_red_light"
+
             android:padding="5dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3">
 
@@ -132,11 +133,10 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="63dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/currency_usd"
-                    />
+                    app:srcCompat="@drawable/currency_usd" />
 
                 <EditText
                     android:id="@+id/precio_input"
@@ -145,9 +145,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_toStartOf="@+id/button2"
                     android:ems="12"
-                    android:hint="Nombre"
+                    android:hint="Precio"
                     android:inputType="textPersonName"
-                    android:textColor="@android:color/holo_red_light"
+                    android:textColor="@android:color/black"
                     android:textColorHint="@color/colorAccent"
                     app:layout_constraintEnd_toStartOf="@+id/button2"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -163,8 +163,7 @@
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:alpha="0.1"
-            android:background="@android:color/holo_red_light"
+
             android:padding="5dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3">
 
@@ -175,11 +174,11 @@
 
                 <ImageView
                     android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="63dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/sign_text"
-                    />
+
+                    app:srcCompat="@drawable/sign_text" />
 
                 <EditText
                     android:id="@+id/descripcion_input"
@@ -188,9 +187,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_toStartOf="@+id/button2"
                     android:ems="12"
-                    android:hint="Nombre"
+                    android:hint="Descripcion"
                     android:inputType="textPersonName"
-                    android:textColor="@android:color/holo_red_light"
+                    android:textColor="@android:color/black"
                     android:textColorHint="@color/colorAccent"
                     app:layout_constraintEnd_toStartOf="@+id/button2"
                     app:layout_constraintStart_toStartOf="parent" />
