--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -73,7 +73,7 @@
             android:layout_marginEnd="17dp"
             android:layout_marginTop="10dp"
             android:textColor="@android:color/black"
-
+            android:onClick="callDeleteProdu"
             android:layout_toStartOf="@+id/button2"
             android:background="@android:color/transparent"
             android:drawableLeft="@drawable/archive"
