--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     android:focusable="true"
+    android:background="@drawable/border"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     >
