--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="Bienvenido"
+
                 android:textAlignment="center"
-                android:textColor="@color/cardview_shadow_start_color"
+                android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -51,7 +52,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_toEndOf="@+id/welcome_text"
                 android:textAlignment="center"
-                android:textColor="@color/cardview_shadow_start_color"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 tools:text="Nombre completo" />
 
